--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_rounded_date_picker
-description: A new Flutter plugin.
-version: 0.0.1
-author:
-homepage:
+description: The Flutter plugin that help you can choose dates and years with rounded calendars and customizable themes.
+version: 0.1.0
+author: benznest <benz7nbet@gmail.com>
+homepage: https://github.com/benznest/flutter_rounded_date_picker
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
