migrate to null safety

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: flutter_rounded_date_picker
 description: The Flutter plugin that help you can choose dates and years with rounded calendars and customizable themes.
-version: 1.0.5+1
+version: 2.0.0
 author: benznest <benz7nbet@gmail.com>
 homepage: https://github.com/benznest/flutter_rounded_date_picker
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
