--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -1,5 +1,4 @@
-org.gradle.jvmargs=-Xmx1536M
-
+org.gradle.jvmargs=-Xmx8192M
 android.useAndroidX=true
 android.enableJetifier=true
-android.enableR8=true
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17.0.7
